// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VocabCardList /> should adopt a color prop 1`] = `
<styled.ul>
  <VocabCard
    color="blue"
    id={12}
    meanings={
      Array [
        "Before Long",
        "Soon",
      ]
    }
    readings={
      Array [
        Object {
          "character": "近々",
          "kana": "ちかぢか, きんきん, ちかじか",
        },
        Object {
          "character": "間もなく",
          "kana": "まもなく",
        },
      ]
    }
  />
  <VocabCard
    color="blue"
    id={234}
    meanings={
      Array [
        "emergency",
      ]
    }
    readings={
      Array [
        Object {
          "character": "非常",
          "kana": "ひじょう",
        },
        Object {
          "character": "救急",
          "kana": "きゅうきゅう",
        },
        Object {
          "character": "緊急",
          "kana": "きんきゅう",
        },
      ]
    }
  />
</styled.ul>
`;

exports[`<VocabCardList /> should match baseline snapshot 1`] = `
<styled.ul>
  <VocabCard
    color="purple"
    id={12}
    meanings={
      Array [
        "Before Long",
        "Soon",
      ]
    }
    readings={
      Array [
        Object {
          "character": "近々",
          "kana": "ちかぢか, きんきん, ちかじか",
        },
        Object {
          "character": "間もなく",
          "kana": "まもなく",
        },
      ]
    }
  />
  <VocabCard
    color="purple"
    id={234}
    meanings={
      Array [
        "emergency",
      ]
    }
    readings={
      Array [
        Object {
          "character": "非常",
          "kana": "ひじょう",
        },
        Object {
          "character": "救急",
          "kana": "きゅうきゅう",
        },
        Object {
          "character": "緊急",
          "kana": "きんきゅう",
        },
      ]
    }
  />
</styled.ul>
`;
